# opswarden

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Cargo.toml  HOWTOCONTRIBUTE.md  Justfile  LICENSE  NOTICE  README.md  WEBSOCKET_SPEC.md  bump-sizes.js  docker-compose.yml  flake.nix  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml
client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client-desktop/src-tauri/capabilities/: default.json
client-desktop/src-tauri/icons/: icon.icns
client-desktop/src-tauri/src/: lib.rs  main.rs
server/: Cargo.toml  Dockerfile
server/.sqlx/: query-0ae7568b1701027f7b05a498fe9ae3587ad5ef0091ba9f3911776c3a285a08e0.json  query-21e85abc43eeb034fd15ca024ed02a8f7414aa4a548f2a659d0c1b0f2d27d49b.json  query-23d80e5fa935e2295691dd5013eb7ab7ef2463bbfb60ec419df12a49a6c4e8be.json  query-27e4f04719555ceed21e7141e1f2207a88d2cc8cc6887b63e4be8cce3114ebda.json  query-2b1376a6579039d212590c14fb678b3c8f6b386355658b9f33ac94aaa128641e.json  query-39b348e5d7c5f4c8fae0d46dcf7db5f7c2aa18b54a072103148ddec6cb441944.json  query-406a59cc1e604a78e409a328a4add181795bfe840158fe955e31d116dd73dd8f.json  query-43dfc0d7a7cee959b986d3b7adf7be3b4092eeb0bc0f60c2c64f36568eea7148.json  query-47e06af1efd41c382b15bf4e60f565dc3294b482f3ae689357b2a2729c2aabef.json  query-721c5c875412f43d56bf2ce718ab868bb91aef7897a67e87e9b0dd8032736db2.json  query-848025a0a54b15a251abd3bd40a9d6009069777b9c2a10770480dacd47d0d234.json  query-8bb7e4d6d41c68a64c05fe1dbe524005a1d122293be3a4f0180d63aa41e86942.json  query-94289a6aaef5b6e16667ef3892af70a0b6a993c5fd485e8c6e85800847d9ac26.json  query-9eacfb9c7d3bfe640fbe2f2a0521cb48cd86c1124978a44dbb092dbad6e1b06f.json  query-a90bb8298157c7c53e42557743d8874dcf0b1d134b25a51a8c18095dabfa6745.json  query-b0e3d1c70b87bb54819e3fac04b684a9b857aeedb4dcb7cb400c2af0dbb12922.json  query-be1dc41c935a77e6a530c9aa76bf61a6446b034b20d79626d51af9ac57ca0391.json  query-be8f6a46d20608b8f5d8c2b2df369b52e75c210d747bee8f1d6218ea951ba1df.json  query-c5561ebd66ad7cae4e9b3e6ede1c862e756cdeea4dcb59c472a4999e02dfc74c.json  query-cbc96af9adbf9c6138a30d3c0a57252500078be1ee80184ee4d484482f5c5d8a.json  query-d331b78724494e1e7ed1c636e940534b00b8083c185ae744a9d2f28d019d5054.json  query-dccd584fc857466292f03f57b4044eb212a3e2192ef7186ecdce74315736cffb.json  query-de98301fba923cd4ff3c2b02d49cc9a857febcdbb0d8148ed6c1ded43c72c03e.json  query-e39e2a15540d855ea3d87fb65b1bddcff75d464ead435e201fbeee06f29a5fbc.json  query-e3e440cc520e8b4a46a22cc255a205cd3f722ac8ea14767d628bc47ef4310a5e.json  query-ef075ba1dc5e05a2167fa110e4fa3547d869172191cfd661211ecf55db15a32b.json  query-fbceb0f551f14d2716c6fcd8e2087039e5b5324294ac8ffe4b6767e1a3ffdd7e.json
server/migrations/: 0001_init.sql  0001_users.sql  0002_teams_rbac.sql  0002_timeline_edit_reactions.sql  0003_auth_sessions.sql  0003_team_bans.sql  0004_incidents.sql  0004_private_messages.sql  0005_releases.sql  0005_timeline.sql  0006_external_secrets.sql  0007_timeline_edit_reactions.sql  0008_team_bans.sql  0009_private_messages.sql  0010_releases.sql  0011_incident_activity.sql  0012_backfill_incident_created_events.sql  0013_release_freshness.sql  0014_team_automation.sql  0015_connection_delivery_status.sql  0016_remove_legacy_automation.sql
server/src/: config.rs  lib.rs  main.rs
server/src/adapters/: automation.rs  giphy.rs  mod.rs  notify.rs  oauth.rs
server/src/app/: auth.rs  mod.rs
server/src/domain/: automation.rs  automation_catalog.rs  automation_config.rs  capabilities.rs  error.rs  event.rs  incident.rs  incident_event.rs  mod.rs  team.rs  (+4 more)
server/tests/: auth.rs  giphy.rs  health.rs  http_automation_pg.rs  incidents.rs  middleware.rs  private_messages.rs  releases.rs  service_connections.rs  team_automation.rs  team_webhooks.rs  teams.rs  webhooks.rs
(+346 files in other folders)
