# --- server/Cargo.toml ---

[package]
name = "opswarden-server"
version = "0.1.0"
edition = "2021"
description = "OpsWarden application server"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
argon2 = "0.5.3"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
