[package]
name = "opswarden-desktop"
version = "0.1.0"
description = "OpsWarden desktop shell (Tauri v2)"
edition = "2021"
rust-version = "1.77.2"

# Lib-first (Tauri v2 convention): main.rs only calls run(), so the same entry
# point can later target mobile if ever needed.
[lib]
name = "opswarden_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
